# medgraph

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/public/: manifest.json  sw.js
dashboard/src/: App.css  App.tsx  index.css
deploy/: Caddyfile  prometheus.yml
docs/: INDEX.md  PHASE2-SUMMARY.md  PHASE3-OBSERVABILITY.md  PHASE4-DATABASE-SCALE.md  api-hardening-phase2.md  code-standards.md  codebase-summary.md  deployment-guide.md  design-faers-pipeline.md  design-fda-nlp.md  design-gnn-prediction.md  design-guidelines.md  design-pgx-privacy.md  design-pgx-scoring.md  logic-diagrams.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
docs/security-reports/: 2026-03-24-security-posture-report-ceo.md
medgraph/: __init__.py  __main__.py  cli.py  logging_config.py
medgraph/agents/: __init__.py  base.py  fda_enrichment_agent.py  label_parser_agent.py  severity_agent.py
medgraph/api/: __init__.py  audit.py  auth.py  errors.py  metrics.py  middleware.py  models.py  search.py  security.py  server.py  user_auth.py
medgraph/data/: __init__.py  drugbank.py  evidence_classifier.py  openfda.py  pubmed_agent.py  refresh_pipeline.py  refresh_service.py  rxnorm.py  seed.py  (+11 more)
tests/: conftest.py  test_agents_enrichment.py  test_api.py  test_api_hardening.py  test_auth.py  test_data.py  test_database.py  test_db_config.py  test_engine.py  test_enzyme_indexer.py  test_explainer.py  test_food_interactions.py  test_logging_config.py  test_observability.py  test_pathfinder_scorer_edge_cases.py  test_pgx_scorer.py  test_refresh_service.py  test_report_generators.py  test_security_headers.py  test_severity_agent.py
(+101 files in other folders)
