[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medgraph"
version = "0.1.0"
description = "Drug Interaction Cascade Analyzer — knowledge graph + cascade analysis on real pharmacological data"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "networkx>=3.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "reportlab>=4.0",
    "prometheus-fastapi-instrumentator>=7.0",
]

[project.optional-dependencies]
sentry = ["sentry-sdk[fastapi]>=2.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
include = ["medgraph*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
